test: GlobalExceptionHandler, SearchSyncEventListener, UserHeaderUtil 단위 테스트 작성